// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRadioGroup.vue should be in error when v-radio-group is 1`] = `

<div class="v-input v-input--selection-controls v-input--radio-group v-input--radio-group--column v-input--has-state error--text">
  <div class="v-input__control">
    <div class="v-input__slot"
         style="height: auto;"
    >
      <div role="radiogroup"
           class="v-input--radio-group__input"
      >
        <div class="v-radio">
          <div class="v-input--selection-controls__input">
            <input aria-checked="false"
                   name="v-radio-4"
                   role="radio"
                   type="radio"
            >
            <div class="v-input--selection-controls__ripple error--text">
            </div>
            <i aria-hidden="true"
               class="v-icon material-icons error--text"
            >
              radio_button_unchecked
            </i>
          </div>
          <label aria-hidden="true"
                 class="v-label error--text"
                 style="left: 0px; position: relative;"
          >
          </label>
        </div>
      </div>
    </div>
    <div class="v-messages error--text">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VRadioGroup.vue should be in error when v-radio-group is 2`] = `

<div class="v-input v-input--selection-controls v-input--radio-group v-input--radio-group--column">
  <div class="v-input__control">
    <div class="v-input__slot"
         style="height: auto;"
    >
      <div role="radiogroup"
           class="v-input--radio-group__input"
      >
        <div class="v-radio">
          <div class="v-input--selection-controls__input">
            <input aria-checked="false"
                   name="v-radio-4"
                   role="radio"
                   type="radio"
            >
            <div class="v-input--selection-controls__ripple">
            </div>
            <i aria-hidden="true"
               class="v-icon material-icons"
            >
              radio_button_unchecked
            </i>
          </div>
          <label aria-hidden="true"
                 class="v-label"
                 style="left: 0px; position: relative;"
          >
          </label>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VRadioGroup.vue should render role on radio group 1`] = `

<div class="v-input v-input--selection-controls v-input--radio-group v-input--radio-group--column">
  <div class="v-input__control">
    <div class="v-input__slot"
         style="height: auto;"
    >
      <div role="radiogroup"
           class="v-input--radio-group__input"
      >
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;
